--- a/Dev/Source/Mvvm/ExceptionTexts.resx
+++ b/Dev/Source/Mvvm/ExceptionTexts.resx
@@ -270,4 +270,7 @@
   <data name="MultipleUndoRoots" xml:space="preserve">
     <value>At most one ancestor of a certain distance can be the undo root.</value>
   </data>
+  <data name="NoUndoRootManagerFound" xml:space="preserve">
+    <value>Undo functionality is enabled but no undo manager is found in the view model hierarchy</value>
+  </data>
 </root>
