--- a/Dev/Source/Mvvm/ExceptionTexts.resx
+++ b/Dev/Source/Mvvm/ExceptionTexts.resx
@@ -273,4 +273,7 @@
   <data name="NoUndoRootManagerFound" xml:space="preserve">
     <value>Undo functionality is enabled but no undo manager is found in the view model hierarchy</value>
   </data>
+  <data name="RollbackPointNotFound" xml:space="preserve">
+    <value>The 'UndoManager' does not contain the rollback point.</value>
+  </data>
 </root>
