Advanced multi selection.

--- a/Dev/Source/Todo.txt
+++ b/Dev/Source/Todo.txt
@@ -1,3 +1,4 @@
 // TODO: Test refresh behaviors against null values.
 // TODO: Remove warnings
 // TODO: Write unit test for path lazy loading
+// TODO: Test UI visualization for multi selection validation error (element not valid).
