--- a/Dev/Source/Todo.txt
+++ b/Dev/Source/Todo.txt
@@ -2,3 +2,4 @@
 // TODO: Remove warnings
 // TODO: Write unit test for path lazy loading
 // TODO: Test UI visualization for multi selection validation error (element not valid).
+// TODO: Make error message of property can not be accessed while loading more user friendly. Test who recursively defined properties behave.
