--- a/Dev/Source/Todo.txt
+++ b/Dev/Source/Todo.txt
@@ -5,3 +5,4 @@
 // TODO: Make error message of property can not be accessed while loading more user friendly. Test who recursively defined properties behave.
 // TODO: Make collection refresh work for source collections with duplicate items.
 // TODO: Make CollectionResultCache tests better and also test view model validation case...
+// TODO: Cleanup Validation error creations and assertions in tests.
