--- a/Dev/Source/Todo.txt
+++ b/Dev/Source/Todo.txt
@@ -6,3 +6,5 @@
 // TODO: Make collection refresh work for source collections with duplicate items.
 // TODO: Make CollectionResultCache tests better and also test view model validation case...
 // TODO: Cleanup Validation error creations and assertions in tests.
+// TODO: Declarative dependendcies: rethink collection change handling
+// TODO: Behavior configuration: think of poition in chain when manually adding behaviors
