--- a/Source/Mvvm/ExceptionTexts.resx
+++ b/Source/Mvvm/ExceptionTexts.resx
@@ -288,4 +288,7 @@
   <data name="IncompleteDependencySetupMissingTargetPath" xml:space="preserve">
     <value>Dependency configuration is incomplete. For validation and refresh actions a target path is required.</value>
   </data>
+  <data name="FolderBrowserDialogNoRootFolder" xml:space="preserve">
+    <value>Unable to retrieve the root folder.</value>
+  </data>
 </root>
