--- a/Features/EventSystem/Source/Mvvm/ExceptionTexts.resx
+++ b/Features/EventSystem/Source/Mvvm/ExceptionTexts.resx
@@ -288,4 +288,7 @@
   <data name="IncompleteDependencySetupMissingTargetPath" xml:space="preserve">
     <value>Dependency configuration is incomplete. For validation and refresh actions a target path is required.</value>
   </data>
+  <data name="WeakCollectionDoesNotSupportNullItems" xml:space="preserve">
+    <value>The 'WeakCollection' does not support 'null' items.</value>
+  </data>
 </root>
