--- a/Main/Source/Mvvm/ExceptionTexts.resx
+++ b/Main/Source/Mvvm/ExceptionTexts.resx
@@ -288,6 +288,9 @@
   <data name="IncompleteDependencySetupMissingTargetPath" xml:space="preserve">
     <value>Dependency configuration is incomplete. For validation and refresh actions a target path is required.</value>
   </data>
+  <data name="WeakCollectionDoesNotSupportNullItems" xml:space="preserve">
+    <value>The 'WeakCollection' does not support 'null' items.</value>
+  </data>
   <data name="FolderBrowserDialogNoRootFolder" xml:space="preserve">
     <value>Unable to retrieve the root folder.</value>
   </data>
