Modified selection VMs so that non-existing-item-check has to be activated manually.

--- a/Main/Source/MvvmContrib/Resources/Localized.de.resx
+++ b/Main/Source/MvvmContrib/Resources/Localized.de.resx
@@ -127,4 +127,7 @@
   <data name="MultiSelectionCompositeValidationErrorSeparator" xml:space="preserve">
     <value> </value>
   </data>
+  <data name="SelectedItemsNotInSourceItems" xml:space="preserve">
+    <value>Das gewählte Element ist nicht vorhanden.</value>
+  </data>
 </root>
